--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,23 @@
     <string name="give_permission">Give permission</string>
     <string name="remove_configuration">Remove configuration</string>
     <string name="synchronize">Synchronize calls</string>
-    <string name="syncEnabledMessage">Synchronization of incoming call is now enabled.</string>
-    <string name="syncDisabledMessage">Synchronization of incoming call is now disabled.</string>
     <string name="notification_info">Sync running.</string>
+
+    <string-array name="config_instructions">
+        <item>Spárování aplikace s pokladním systémem Storyous:</item>
+        <item>V pokladním systému Storyous otevřete pomocí [obrázek burger menu] levé menu</item>
+        <item>Otevřete „Zařízení”</item>
+        <item>Vyberte Storyous Assistant</item>
+        <item>Zobrazí se vám QR kód, který tímto zařízením načtěte</item>
+    </string-array>
+
+    <string-array name="create_order_instructions">
+        <item>Synchronizace je zapnutá. Telefonní číslo, které vám bude volat na tento telefon lze načíst přímo z pokladny.</item>
+        <item>Podržením na „Rychlá objednávka” otevřete okno pro zadání objednávky</item>
+        <item>V sekci „Telefonní číslo” klikněte na ikonku mobilního telefonu</item>
+        <item>Telefonní číslo právě probíhajícího telefonu se propíše do pokladny</item>
+        <item>Aplikace běží na pozadí, nemusíte ji tedy mít pro správnou funkci aktivní</item>
+    </string-array>
+
+    <string name="syncDisabledMessage">Synchronizace je vypnutá, do pokladny se nebudou propisovat právě probíhající hovory.</string>
 </resources>
